[package]

name = "cellular_maps"
version = "0.1.0"
authors = [ "Davide Aversa <thek3nger@gmail.com>" ]
license = "MIT"
repository = "https://github.com/THeK3nger/CellularMaps-Rust"
description = "A simple library to generate 2D procedural bitmaps using the cellular automata technique."

[lib]

name = "cellular_maps"

[[bin]]

name = "cellular_maps"
doc = false

[dependencies]
rand = "0.3.8" # Or a specific version
