[package]

name = "cellular_maps"
version = "1.1.0"
authors = [ "Davide Aversa <thek3nger@gmail.com>" ]
license = "MIT"
repository = "https://github.com/THeK3nger/CellularMaps-Rust"
description = "A simple library to generate 2D procedural bitmaps using the cellular automata technique."
edition = "2018"

[lib]

name = "cellular_maps"

[dependencies]
rand = "0.4.2" # Or a specific version
